# jellyfin-renamer

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  rename.sh
.github/workflows/: shellcheck.yml
Notes/: next-steps.md
Tests/: README.md  conftest.py  test_cleaner.py  test_deep_clean_mp4.py  test_episode_pattern_detection.py  test_parser.py
Tests/fixtures/: filenames.json
archive/: README.md  rename.sh
archive/tests/: README.md  test_deep_clean_mp4.py  test_web_and_ellipsis.py
renamer/: __init__.py  __main__.py  cleaner.py  cli.py  metadata.py  operations.py  parser.py
